# alcall

./: .eslintrc.json  .gitignore  .safety-project.ini  IMPLEMENTATION.md  README.md  eslint.config.js  go.mod  jest.config.cjs  package-lock.json  package.json  pyproject.toml  test_hook.py  tsconfig.json
.github/workflows/: ci.yml
ca/: ca.crt  ca.key  ca.srl
certs/: dev.crt  dev.csr  dev.key
desktop/: README.md
docs/: README.md
infrastructure/: README.md
mobile/: README.md
scripts/: configure-branch-protection.sh  configure_ide.sh  init_repo.sh  install_deps.sh  install_dev_tools.sh  logging_utils.sh  setup_git_hooks.sh  setup_ssl_certs.sh  uninstall_dev_tools.sh
services/: README.md
services/messaging/: message.go  message_test.go
tests/: test_messaging.py
trust/: ca.crt
unifiedchat/core/: messaging.py
web/: README.md
web/components/: MessageInput.test.tsx  MessageInput.tsx
